@@ -64,8 +64,9 @@ to control which stack is the default.
 =head1 COMMAND ARGUMENTS
 
 The required argument is the name of the stack you wish to delete.
-Stack names must be alphanumeric (including "-" or "_") and will be
-forced to lowercase.
+Stack names must be alphanumeric plus hyphens and undersocres, and
+are not case-sensitive.
+
 
 =head1 COMMAND OPTIONS
 
