@@ -89,10 +89,10 @@ C<AUTHOR/ARCHIVE>).  For example: C<JOHN/Foo-Bar-1.0.tar.gz>
 =item --author NAME
 
 Set the identity of the replacement distribution author.  The C<NAME>
-must be alphanumeric characters (no spaces) and will be forced to
-uppercase.  Defaults to the C<user> specified in your C<~/.pause>
-configuration file (if such file exists).  Otherwise, defaults to your
-current login username.
+must be alphanumeric characters plus hyphens and uderscores.  Defaults
+to the uppercased C<user> specified in your C<~/.pause> configuration
+file if such file exists.  Otherwise, defaults to your current login
+username.
 
 =item --dryrun
 
